# matrix

./: CMakeLists.txt  README.md  main.cpp  test_gener.py
include/: exceptions.hpp  matrix.hpp
source/: matrix.cpp
tests/: test.sh
tests/unit_test/: test.cpp
